...
                              text: tr(LocaleKeys.password),
                              showStarMark: true,
                              fontWeight: FontWeight.w500,
                            ),
                            StatefulBuilder(builder: (context, eyeState) {
                              return ThemeTextFormField(
                                key: const Key("password"),
                                controller: passwordTextController,
                                hint: tr(LocaleKeys.enterPassword),
                                style: const TextStyle(fontSize: 14),
                                hintStyle: const TextStyle(fontSize: 14),
                                inputFormatters: [
                                  FilteringTextInputFormatter.deny(
...
                    ),
                    Padding(
                      padding: const EdgeInsets.symmetric(vertical: 30),
                      child: BlocBuilder<LoginBloc, LoginState>(
                        builder: (context, loginState) {
                          return ThemeElevatedButton(
                            key: const Key("login_button"),
                            showLoadingSpinner: loginState.loginLoading,
                            buttonName: tr(LocaleKeys.login),
                            textFontSize: 16,
                            onPressed: () async {
                              if (formkey.currentState!.validate()) {
                                FocusManager.instance.primaryFocus?.unfocus();
...
