...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.symmetric(
                                  horizontal: 20, vertical: 10),
                              child: OTPTextFieldWidget(
                                key: const Key("otp_text_field"),
                                errorController: errorController,
                                onCompleted: (otp) {
                                  otpTextController.text = otp.trim();
                                  context.read<LoginBloc>().add(
                                        VerifyOTP(
                                          otp: otpTextController.text,
...
