...
  "min": "Min",
  "locallyJobDescription": "Post job openings and chance to earn referral bonuses from your company, all while lending a hand to your neighbour in finding job opportunities.",
  "yourJobListings": "Your Job Listings",
  "yourJobListingsDescription": "Post job openings and chance to earn referral bonuses from your company, all while lending a hand to your neighbour in finding job opportunities.",
  "decline": "Decline",
  "disconnect": "Disconnect",
  "next": "Next",
  "skip": "Skip",
  "newWayToConnectWithYourNeighbourhood": "New way to connect with your neighbourhood",
  "getStarted": "Get Started",
  "enterYourEmailOrPhoneNumber": "Enter your Email or Phone number",
  "youAgreeToOur": "You agree to our",
  "termsAndConditions": "Terms & Conditions",
...
